--- a/Slides-Files/Slides/05-LOT-Packages1_master.tex
+++ b/Slides-Files/Slides/05-LOT-Packages1_master.tex
@@ -25,7 +25,7 @@
 %\togglefalse{handout}
 \toggletrue{handout}
 
-\input{04-LOT-BibTeX_text}
+\input{05-LOT-Packages1_text}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -92,6 +92,10 @@
 		\item Link: CTAN -- The Comprehensive \TeX\ Archive Network .\\
 		\url{http://www.ctan.org/}\\
 		{[}Zugriff: 02.01.2019]
+		
+		\item Link: Type IPA phonetic symbols.\\
+		\url{http://ipa.typeit.org/full/}\\
+		{[}Access: 02/01/2019]
 
 %		\item Grafik: Kontextuelle Bedeutung: Wrong Hands -- John Atkinson, \url{http://wronghands1.tumblr.com/post/157354512780} \\
 %		{[}Zugriff: 23.01.2017]
