--- a/texfiles-beamer/tex-literature.bib
+++ b/texfiles-beamer/tex-literature.bib
@@ -1128,7 +1128,7 @@
 
 @book{Meindl11a,
 	Author = {Meindl, Claudia},
-	Title = {Methodik für Linguisten. Eine Einführung in Statistik und Versuchsplanung},
+	Title = {Methodik für Linguisten: Eine Einführung in Statistik und Versuchsplanung},
 	Publisher = {Narr},
 	Address = {Tübingen},
 	Year = {2011} }
@@ -1249,7 +1249,7 @@
 
 @incollection{Nolda&Co14a,
 	Author = {Nolda, Andreas and {Machicao y Priemer}, Antonio and Sioupi, Athina},
-	Title = {Die {K}ern/{P}eripherie-Unterscheidung: {P}robleme und {P}ositionen},
+	Title = {Die {K}ern/{P}eripherie-{U}nterscheidung: {P}robleme und {P}ositionen},
 	BookTitle = {Zwischen Kern und Peripherie: Untersuchungen zu Randbereichen in Sprache und Grammatik},
 	Editor = {{Machicao y Priemer}, Antonio and Nolda, Andreas and Sioupi, Athina},
 	Publisher = {De Gruyter},
