--- a/texfiles-beamer/tex-localpackages.tex
+++ b/texfiles-beamer/tex-localpackages.tex
@@ -32,7 +32,7 @@
 
 
 %% TIPA encoding needs options: T3 & T1
-\usepackage[T3,T1]{fontenc}  %not needed in XeLaTeX (?)
+%\usepackage[T3,T1]{fontenc}  %not needed in XeLaTeX (?)
 
 %\usepackage{fontspec} % XeLaTeX: Problem: Libertine+Fontspec+TIPA
 
@@ -174,10 +174,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%          IPA                                 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\usepackage[noenc,safe]{tipa}	%in PDFLaTeX
-\usepackage[safe]{tipa}	% in XeLaTeX
-
+%\usepackage[safe]{tipa}	% in XeLaTeX
+\usepackage{tipa}	% in XeLaTeX
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%          Vowel diagram                       
