--- a/Slides-Files/Slides/05-LOT-IPA&Verbatim_text.tex
+++ b/Slides-Files/Slides/05-LOT-IPA&Verbatim_text.tex
@@ -13,7 +13,7 @@
 	\LaTeX\ for Linguists
 }
 
-\subtitle{\LaTeX\ 5: Linguistic packages 1}
+\subtitle{\LaTeX\ 5: IPA \& verbatim}
 
 \author[aMyP]{
 	{\small Sebastian Nordhoff \& Antonio Machicao y Priemer}
