--- a/texfiles-beamer/tex-literature.bib
+++ b/texfiles-beamer/tex-literature.bib
@@ -813,7 +813,7 @@
 	author = {Knuth, Donald E.},
 	address = {Boston},
 	publisher = {Addison-Wesley},
-	title = {The \TeX book},
+	title = {The TeX book},
 	year = {1986}
 }
 
@@ -843,7 +843,7 @@
 
 @book{Kopka94a,
 	Author = {Kopka, Helmut},
-	Title = {\LaTeX: Einführung},
+	Title = {LaTeX: Einführung},
 	Volume = {1},
 	Publisher = {Addison-Wesley},
 	Address = {Bonn},
@@ -1256,6 +1256,16 @@
 	Address = {Berlin},
 	Pages = {9--23},
 	Year = {2014} }
+
+@misc{Nordhoff&Co,
+	Author = {Nordhoff, Sebastian and Müller, Stefan},
+	title = {Language {S}cience {P}ress: Complete set of guidelines},
+	Howpublished = {online},
+	publisher = {Language Science Press},
+	address = {Berlin},
+	year = {2018},
+	URL = {http://langsci.github.io/guidelines/latexguidelines/LangSci-guidelines.pdf},
+	URLdate = {12/01/2019} }
 
 @book{Olsen&Co91a,
 	author = {Olsen, Susan and Fanselow, Gisbert},
