--- a/texfiles-beamer/tex-localpackages.tex
+++ b/texfiles-beamer/tex-localpackages.tex
@@ -124,6 +124,9 @@
 	backgroundcolor=\color{lightgray},
 	basicstyle={\footnotesize\ttfamily\color{blue}},
 	showstringspaces=false,
+%	showspaces=false,
+	breaklines=true,
+%	tabsize=2,
 	columns=flexible
 }
 \lstset{literate=%
