--- a/Slides-Files/Slides/05-LOT-IPA&Verbatim_master.tex
+++ b/Slides-Files/Slides/05-LOT-IPA&Verbatim_master.tex
@@ -25,7 +25,7 @@
 %\togglefalse{handout}
 \toggletrue{handout}
 
-\input{05-LOT-Packages1_text}
+\input{05-LOT-IPA&Verbatim_text}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
