--- a/exercises/ex1/myDocument-SS4.tex
+++ b/exercises/ex1/myDocument-SS4.tex
@@ -29,12 +29,12 @@
 
 \section[Introduction]{A short introduction}
 
-This is an sample text. The only purpose of this text is to show how to work with \LaTeX . It is not necessary that this text has any meaning. It should only show some properties of the system we are using.
+This is a sample text. The only purpose of this text is to show how to work with \LaTeX . It is not necessary that this text has any meaning. It should only show some properties of the system we are using.
 
 
 \subsection{A note on the data}
 
-This is an sample text. The only purpose of this text is to show how to work with \LaTeX . It is not necessary that this text has any meaning. It should only show some properties of the system we are using.
+This is a sample text. The only purpose of this text is to show how to work with \LaTeX . It is not necessary that this text has any meaning. It should only show some properties of the system we are using.
 
 
 \end{document}
