--- a/texfiles-beamer/tex-literature.bib
+++ b/texfiles-beamer/tex-literature.bib
@@ -248,7 +248,7 @@
 
 @misc{Carlisle&Co01a,
 	Author = {Carlisle, David and Pakin, Scott and Holt, Alexander},
-	Title = {The Great, Big List of \LaTeX\ Symbols},
+	Title = {The Great, Big List of LaTeX Symbols},
 	URLdate = {08.12.2017},
 	Howpublished = {Handbuch},
 	URL = {https://www.rpi.edu/dept/arc/training/latex/LaTeX_symbols.pdf},
@@ -1278,7 +1278,7 @@
 
 @misc{Pakin17a,
 	Author = {Pakin, Scott},
-	Title = {The Comprehensive \LaTeX\ Symbol List -- Symbols accessible from \LaTeX},
+	Title = {The Comprehensive LaTeX Symbol List -- Symbols accessible from LaTeX},
 	URLdate = {08.12.2017},
 	Howpublished = {Handbuch},
 	URL = {https://ctan.org/tex-archive/info/symbols/comprehensive/},
