--- a/Slides-Files/Slides/01-LOT-Basics_text.tex
+++ b/Slides-Files/Slides/01-LOT-Basics_text.tex
@@ -63,7 +63,7 @@
 \nocite{Freitag&MyP15a}
 \nocite{Knuth1986}
 \nocite{Kopka94a}
-\nocite{MyP17c}
+%\nocite{MyP17c}
 \nocite{MyP&Kerkhof16a}
 	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -107,7 +107,7 @@
 	
 	\item \LaTeX\ is an interface with helpful macros for the \TeX\ system. It was written by Leslie Lamport ($=$ \textbf{La}mport \textbf{\TeX }). 
 	
-	\item Pronunciation: \textipa{["la:.tE\c{c}]}, \textipa{["leI.tE\c{c}]}, \textipa{["leI.tEkh]}
+%	\item Pronunciation: \textipa{["la:.tE\c{c}]}, \textipa{["leI.tE\c{c}]}, \textipa{["leI.tEkh]}
 	
 	\item \LaTeX\ works with markup tagging conventions -- similar to HTML -- to 
 	
