--- a/Slides-Files/Slides/03-LOT-FigTabFloat_text.tex
+++ b/Slides-Files/Slides/03-LOT-FigTabFloat_text.tex
@@ -63,8 +63,9 @@
 \nocite{Freitag&MyP15a}
 \nocite{Knuth1986}
 \nocite{Kopka94a}
-\nocite{MyP17c}
-\nocite{MyP&Kerkhof16a}
+%\nocite{MyP17c}
+%\nocite{MyP&Kerkhof16a}
+\nocite{Nordhoff&Co}
 	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
