--- a/Slides-Files/Slides/06-LOT-Examples_text.tex
+++ b/Slides-Files/Slides/06-LOT-Examples_text.tex
@@ -64,7 +64,7 @@
 \nocite{Knuth1986}
 \nocite{Kopka94a}
 \nocite{MyP17c}
-\nocite{MyP&Kerkhof16a}
+%\nocite{MyP&Kerkhof16a}
 	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
