--- a/texfiles-beamer/tex-literature.bib
+++ b/texfiles-beamer/tex-literature.bib
@@ -248,9 +248,9 @@
 
 @misc{Carlisle&Co01a,
 	Author = {Carlisle, David and Pakin, Scott and Holt, Alexander},
-	Title = {The Great, Big List of LaTeX Symbols},
+	Title = {The Great, Big List of {LaTeX} Symbols},
 	URLdate = {08.12.2017},
-	Howpublished = {Handbuch},
+	Howpublished = {Handbook},
 	URL = {https://www.rpi.edu/dept/arc/training/latex/LaTeX_symbols.pdf},
 	Year = {2001} }
 
@@ -487,7 +487,7 @@
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/latex-einfuehrung},
 	URLdate = {12.04.2015},
-	Howpublished = {Manuskript},
+	Howpublished = {Manuscript},
 	Year = {2015} }
 
 @book{Fries80a,
@@ -813,7 +813,7 @@
 	author = {Knuth, Donald E.},
 	address = {Boston},
 	publisher = {Addison-Wesley},
-	title = {The TeX book},
+	title = {The {TeX} book},
 	year = {1986}
 }
 
@@ -843,7 +843,7 @@
 
 @book{Kopka94a,
 	Author = {Kopka, Helmut},
-	Title = {LaTeX: Einführung},
+	Title = {{LaTeX}: Einführung},
 	Volume = {1},
 	Publisher = {Addison-Wesley},
 	Address = {Bonn},
@@ -931,9 +931,9 @@
 
 @misc{Linke05a,
 	Author = {Linke, Rona and Linke, Alex},
-	Title = {LATEX für Linguisten: IPA, Glossing und Baumstrukturen},
+	Title = {{LaTeX} für {L}inguisten: {IPA}, {G}lossing und {B}aumstrukturen},
 	Publisher = {Ruhr-Universität Bochum},
-	Howpublished = {Manuskript},
+	Howpublished = {Manuscript},
 	URL = {http://homepage.ruhr-uni-bochum.de/alexander.linke-2/linguistik/LaTeX/},
 	URLdate = {07.05.2013},
 	Year = {2005} }
@@ -1015,7 +1015,20 @@
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/downloads/myp2018-04-06-hinweise_seminararbeit.pdf},
 	URLdate = {16.10.2018},
-	Howpublished = {Manuskript},
+	Howpublished = {Manuscript},
+	Year = {2018} }
+
+@incollection{MyP18b,
+	Author = {{Machicao y Priemer}, Antonio},
+	Title = {Kopf},
+	BookTitle = {Grammatik: {S}yntax},
+	Editor = {Schierholz, Stefan and Uzonyi, Pál},
+	Series = {Wörterbücher zur {S}prach- und {K}ommunikationswissenschaft},
+	Number = {1.2},
+	Publisher = {De Gruyter},
+	Address = {Berlin},
+	URL = {https://www.researchgate.net/publication/325046855_Kopf_Pre-Print},
+	URLdate = {14/8/2018},
 	Year = {2018} }
 
 @incollection{MyP18h,
@@ -1250,7 +1263,7 @@
 @incollection{Nolda&Co14a,
 	Author = {Nolda, Andreas and {Machicao y Priemer}, Antonio and Sioupi, Athina},
 	Title = {Die {K}ern/{P}eripherie-{U}nterscheidung: {P}robleme und {P}ositionen},
-	BookTitle = {Zwischen Kern und Peripherie: Untersuchungen zu Randbereichen in Sprache und Grammatik},
+	BookTitle = {Zwischen {K}ern und {P}eripherie: {U}ntersuchungen zu {R}andbereichen in {S}prache und {G}rammatik},
 	Editor = {{Machicao y Priemer}, Antonio and Nolda, Andreas and Sioupi, Athina},
 	Publisher = {De Gruyter},
 	Address = {Berlin},
@@ -1278,9 +1291,9 @@
 
 @misc{Pakin17a,
 	Author = {Pakin, Scott},
-	Title = {The Comprehensive LaTeX Symbol List -- Symbols accessible from LaTeX},
-	URLdate = {08.12.2017},
-	Howpublished = {Handbuch},
+	Title = {The Comprehensive {LaTeX} Symbol List -- Symbols accessible from {LaTeX}},
+	URLdate = {08/12/2017},
+	Howpublished = {Handbook},
 	URL = {https://ctan.org/tex-archive/info/symbols/comprehensive/},
 	Year = {2017} }
 
@@ -1342,7 +1355,7 @@
 
 @book{Pollard&Sag94a,
 	Author = {Pollard, Carl and Sag, Ivan},
-	Title = {Head-Driven Phrase Structure Grammar},
+	Title = {Head-{D}riven {P}hrase {S}tructure {G}rammar},
 	Publisher = {University of Chicago Press},
 	Address = {Chicago},
 	Year = {1994} }
@@ -1416,7 +1429,7 @@
 
 @article{Rei01a,
 	Author = {Rei, Fukui},
-	Title = {vowel -- Draw vowel charts for phonetic research},
+	Title = {vowel -- {D}raw vowel charts for phonetic research},
 	Journal = {CTAN: Comprehensive TeX Archive Network},	
 	Howpublished = {Handbuch},
 	URL = {https://ctan.org/pkg/vowel},
@@ -1443,7 +1456,7 @@
 
 @book{Rothstein11a,
 	Author = {Rothstein, Björn},
-	Title = {Wissenschaftliches Arbeiten für Linguisten},
+	Title = {Wissenschaftliches {A}rbeiten für {L}inguisten},
 	Publisher = {Narr},
 	Address = {Tübingen},
 	Year = {2011} }
