--- a/Slides-Files/Slides/04-LOT-BibTeX_master.tex
+++ b/Slides-Files/Slides/04-LOT-BibTeX_master.tex
@@ -38,7 +38,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Quellen}
+\section{Internet sources}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -48,67 +48,165 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Quellen}
+\frametitle{Internet sources}
 
 {\footnotesize
 	
-	\begin{itemize}
+\begin{itemize}
+
+%% 01 Basics
+
+%		\item Graphic: File Extensions -- xkcd, A webcomic of romance, sarcasm, math, and language\\
+%		\url{https://xkcd.com/1301/} \\
+%		{[}Access: 10/04/2017]
+%		
+%		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
+%		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
+%		{[}Access: 10/10/2017]
+%		
+%		\item Link: KOMA-Script.\\
+%		\url{https://www.komascript.de/}\\
+%		{[}Access: 02/01/2019]
+%		
+%		\item Link: Overleaf.\\
+%		\url{https://www.overleaf.com}\\
+%		{[}Access: 02/01/2019]
+%		
+%		\item Link: \LaTeX /Special Characters.\\
+%		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
+%		{[}Access: 02/01/2019]
+%		
+%		\item Link: CTAN -- The Comprehensive \TeX\ Archive Network .\\
+%		\url{http://www.ctan.org/}\\
+%		{[}Access: 02/01/2019]
+%		
+%		\item Software: \ltxpack{MiKTeX}\\
+%		\url{https://miktex.org/} \\
+%		{[}Access: 10/0472017]
+%		
+%		\item Software: \ltxpack{TeXstudio}\\
+%		\url{https://www.texstudio.org/} \\
+%		{[}Access: 10/04/2017]
+
+%% 02 Math mode & new commands
+
+%		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
+%		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
+%		{[}Access: 10/10/2017]
+%
+%		\item Link: \LaTeX /Special Characters.\\
+%		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
+%		{[}Access: 02/01/2019]
+
+%% 03 Graphics, tables & floats
+
+%		\item Twitter: \TeX\ tips\\
+%		\url{https://twitter.com/textip} \\
+%		{[}Access: 10/04/2017]
+
+%% 04 BibTeX
+
+		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
+		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
+		{[}Access: 10/10/2017]
+
 		\item Link: Bib\TeX\ -- Wikipedia (German)\\
 		\url{https://de.wikipedia.org/wiki/BibTeX}\\
-		{[}Zugriff: 23.10.2017]
+		{[}Access: 23/10/2017]
 		
 		\item Link: Bib\TeX\ -- Wikipedia (English)\\
 		\url{https://en.wikipedia.org/wiki/BibTeX}\\
-		{[}Zugriff: 11.01.2019]
+		{[}Access: 11/01/2019]
 		
 		\item Link: Bib\TeX .org\\
 		\url{http://www.bibtex.org}\\
-		{[}Zugriff: 23.10.2017]
+		{[}Access: 23/10/2017]
 		
-		\item Link: Creating and Managing Bibliographies with Bib\TeX\ on Overleaf -- (Lian Tze Lim)\\
+		\item Link: Creating and Managing Bibliographies with Bib\TeX\ on Overleaf -- Lian Tze Lim\\
 		\url{https://www.overleaf.com/blog/532-creating-and-managing-bibliographies-with-bibtex-on-overleaf}\\
-		{[}Zugriff: 28.11.2017]
+		{[}Access: 28/11/2017]
 		
-		\item Paket: \ltxpack{natbib} -- Flexible bibliography support.\\
-		\url{https://ctan.org/pkg/natbib}\\
-		{[}Zugriff: 23.10.2017]
-		
-		\item Twitter: \TeX\ tips\\
-		\url{https://twitter.com/textip} \\
-		{[}Zugriff: 10.04.2017]
-		
-		\item YouTube-Tutorial: \LaTeX\ Tutorial\\
-		\url{https://www.youtube.com/channel/UCC-3dzj6dfbWwGzQzhkUS5A}\\
-		{[}Zugriff: 23.10.2017]
-		
-		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
-		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
-		{[}Zugriff: 10.10.2017]
-
 		\item Link: \LaTeX /Special Characters.\\
 		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
-		{[}Zugriff: 02.01.2019]
+		{[}Access: 02/01/2019]
 		
-		\item Link: CTAN -- The Comprehensive \TeX\ Archive Network .\\
-		\url{http://www.ctan.org/}\\
-		{[}Zugriff: 02.01.2019]
+		\item Package: \ltxpack{natbib} -- Flexible bibliography support.\\
+		\url{https://ctan.org/pkg/natbib}\\
+		{[}Access: 23/10/2017]
 
-%		\item Grafik: Kontextuelle Bedeutung: Wrong Hands -- John Atkinson, \url{http://wronghands1.tumblr.com/post/157354512780} \\
-%		{[}Zugriff: 23.01.2017]
+%% 05 IPA & verbatim
+
+%		\item Link: CTAN -- The Comprehensive \TeX\ Archive Network .\\
+%		\url{http://www.ctan.org/}\\
+%		{[}Access: 02/01/2019]
+%
+%		\item Link: Type IPA phonetic symbols.\\
+%		\url{http://ipa.typeit.org/full/}\\
+%		{[}Access: 02/01/2019]
+
+%% 06 Examples & glossing
+
+%		\item Link: Language Science Press\\
+%		\url{www.langsci-press.org}\\
+%		{[}Access: 02/01/2019]		
 %		
-%		\item Grafik: Ludwig Wittgenstein: von Moritz Nähr -- Austrian National Library, Gemeinfrei, \url{https://commons.wikimedia.org/w/index.php?curid=46116699} \\
-%		{[}Zugriff: 11.04.2017]	
+%		\item YouTube-Tutorial: \LaTeX\ Tutorial\\
+%		\url{https://www.youtube.com/channel/UCC-3dzj6dfbWwGzQzhkUS5A}\\
+%		{[}Access: 23/10/2017]
+
+%% 07 Math mode 2 & Trees
+
+%		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
+%		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
+%		{[}Access: 10/10/2017]
 %		
-%		\item Grafik: Semantics -- the dark side: mdhk, \url{http://mdhk.tumblr.com/post/78033341047/yes} \\
-%		{[}Zugriff: 29.07.2016]
+%		\item Link: Detexify\\ 
+%		\url{http://detexify.kirelabs.org}\\
+%		{[}Access: 08/12/2017]		
 %		
-%		\item Grafik: Semantische Restriktionen: Linguist Llama, \url{http://lingllama.tumblr.com/post/14266418758/picture-background-8-piece-pie-style-color} \\
-%		{[}Zugriff: 07.04.2014]
+%		\item Link: \LaTeX /Special Characters.\\
+%		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
+%		{[}Access: 02/01/2019]
 %		
-%		\item Video: Trump vs.\ Truth: Last Week Tonight with John Oliver (HBO) \url{https://www.youtube.com/watch?v=xecEV4dSAXE} \\
-%		{[}Zugriff: 12.04.2017]
-		
-	\end{itemize}
+%		\item Link: List of logic symbols -- Wikipedia\\ 
+%		\url{https://en.wikipedia.org/wiki/List_of_logic_symbols}\\
+%		{[}Access: 08/12/2017]		
+%		
+%		\item Link: \LaTeX\ for Logicians:\\		
+%		\url{http://www.logicmatters.net/latex-for-logicians/}\\
+%		{[}Access: 08/12/2017]				
+%		
+%		\item Link: The Comprehensive \LaTeX\ Symbol List -- Symbols accessible from \LaTeX\ \citep{Pakin17a}:\\
+%		\url{https://ctan.org/tex-archive/info/symbols/comprehensive/}\\
+%		{[}Access: 08/12/2017]					
+%		
+%		\item Link: The Great, Big List of \LaTeX\ Symbols \citep{Carlisle&Co01a}:\\
+%		\url{https://www.rpi.edu/dept/arc/training/latex/LaTeX_symbols.pdf}\\
+%		{[}Access: 08/12/2017]		
+
+%% 08 Venn diagram & vowel diagram	
+
+%		\item Link: Drawing vowel charts with TikZ -- Felix Kopecky:\\
+%		\url{https://userblogs.fu-berlin.de/langsci-press/2016/06/15/drawing-vowel-charts-with-tikz/}\\
+%		{[}Access: 08/12/2018]		
+%		
+%		\item Link: Language Science Press\\
+%		\url{www.langsci-press.org}\\
+%		{[}Access: 02/01/2019]		
+%		
+%		\item Link: \LaTeX\ Coffee Stains -- Hanno Rein.\\
+%		\url{http://hanno-rein.de/downloads/coffee.pdf}\\
+%		{[}Access: 12/01/2019]
+%		
+%		\item Link: \LaTeX /Special Characters.\\
+%		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
+%		{[}Access: 02/01/2019]
+%		
+%		\item Link: Type IPA phonetic symbols.\\
+%		\url{http://ipa.typeit.org/full/}\\
+%		{[}Access: 02/01/2019]
+
+\end{itemize}
 }
 
 \end{frame}
@@ -117,7 +215,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Literatur}
+\section{Literature}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -127,17 +225,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Literatur}
+\frametitle{Literature}
 
-	%German
+%German
 %	\bibliographystyle{../../texfiles-beamer/deChicagoMyP}
 
 %	%English
 %	\bibliographystyle{../../texfiles-beamer/enChicagoMyP} 
-	\bibliographystyle{chicago} 
+\bibliographystyle{../../texfiles-beamer/unified} 
 
 {\footnotesize
-	\bibliography{../../texfiles-beamer/tex-literature}
+\bibliography{../../texfiles-beamer/tex-literature}
 }	
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
