--- a/4-2.md
+++ b/4-2.md
@@ -6,4 +6,58 @@
 - draw your favourite representation of the semiotic triangle (e.g. symbol-concept-referent)
 - draw a network graph of Emma, Denis, Janet, Samira, Gottfried, Jussi, and Wang (represented by circles) with a combination of thick, thin and dashed lines symbolising the strength of the links between them. 
 
+
+----
+----
+- create a centered 4x4  tabular (1,2,3,4),(5,6,7,8),(9,10,11,12),(13,14,15,16)
+- change the column definition to `l` and `r`
+- change one column definition to `p{5cm}`
+- add some empty lines
+- *adjust vertical spacing between lines with `\\[5mm]`
+
+----
+- put your tabular in a `{table}` environment
+- add a `\caption` and a `\label`
+- add an additional tabular within the same `table` environment
+- use `~` and `\smallskip` to adjust the spacing of the two tabulars
+- try `\centering` at the beginning of the environment
+
+----
+- use the package `tabularx`
+- add a new table `\begin{tabularx}{\textwidth}{llll}` with the same content as above
+- vary the column definitions between `l`, `r`, `c`, and `X`
+- vary the width of the tabular, e.g. `0.66\textwidth`
+
+
+---- 
+- remove one `l` from one of your tabular column definitions. Recompile
+- add additional `l`s to one of your tabular definitions. Recompile
+- enclose the content of the first cell of the last row in `[...]`
+
+
+---- 
+- use the package `booktabs`
+- add `\toprule`, `\midrule`, `\bottomrule` to your tabulars. NB: professional typographers agree that lines should be limited to a minimum 
+- replace some `\midrule`s by `\hline`s and inspect the difference
+
+----
+- use `\multicol{2}{c}{content for merged cell}` in one of your tables 
+- use `\multicol{2}{l}{content for merged cell}` in one of your tables 
+- use `\multicol{2}{r}{content for merged cell}` in one of your tables 
+
+----
+- use package `multirow`
+- use `\multirow{2}{*}{content for merged cell}` in one of your tables 
+- use `\multirow{-2}{*}{content for merged cell}` in one of your tables 
+- NB: vertical positioning of merged cells is horrible
+- repeating the content of cells often works much better than merging
+
+----
+- experiment with `\cline` and `\cmidrule` between rows
+
+----
+- `\usepackage{colortbl}`
+- `\cellcolor{yellow}`
+- NB: different shades of grey are normally visually more pleasing than primary colours
+
 https://github.com/langsci/latex4linguists/blob/master/5-1.md
