some more float exercises

--- a/2-1.md
+++ b/2-1.md
@@ -9,12 +9,18 @@
 - add a `\caption{}`
 - add a `\label{}` after the caption and refer to the image in the surrounding text 
 - swap the position of `\caption` and `label{}`, recompile twice and see what happens
+
+----
 - *use the package `subfigure` and try `\subfigure[My caption]{\includegraphics{myfile.jpg}}` inside the `{figure}` environment. 
+- refer to your figures and subfigures in the text
 
 ----
 - add a couple of additional images 
 - experiment with the placement parameters `[h]`,`[t]`,`[b]`,`[p]`
 - try `\documentclass[draft]{scrartcl}`
+
+----
+- experiment with `\clearpage` and `\newpage` 
 
 
 
