--- a/1-2.md
+++ b/1-2.md
@@ -9,7 +9,7 @@
 
 ----
 1. produce the Pythagorean theorem in mathmode 
-1. produce the quadratic formula `x = (-b ± (b²-4ac)¹'²)/2a` as shown on https://wikimedia.org/api/rest_v1/media/math/render/svg/391e54182fed02e1b97bdc3edf00ee8732422f1e 
+1. produce the quadratic formula ![Quadratic formula](https://wikimedia.org/api/rest_v1/media/math/render/svg/391e54182fed02e1b97bdc3edf00ee8732422f1e) 
 1. vary between single `$`, double `$$` and `\[...\]`
 
 ----
