--- a/3-2.md
+++ b/3-2.md
@@ -1,9 +1,8 @@
 # Tasks for class 3-1
 
-exi
-exr
-sn
 
+http://mirrors.ctan.org/macros/latex/contrib/gb4e/gb4e-doc.pdf is close to langsci-gb4e for most practical purposes
+ 
 ----
 - Create the following:
     - (1) John gives Mary the book 
