--- a/4-2.md
+++ b/4-2.md
@@ -1,4 +1,5 @@
 # tasks for class 4-2
+http://mirrors.ctan.org/graphics/pgf/base/doc/pgfmanual.pdf Tutorial 5 page 69
 
 ----
 - create two lines with the numbers from 1 to 5 and 1 to 10. Link each integer n from the first line to the integer 2n in the second line
