task for lotdiss document class

--- a/5-1.md
+++ b/5-1.md
@@ -3,8 +3,14 @@
 - Create a `\newcommand` relevant for your field of research
 - Create a `\newcommand` with one or more arguments 
 - Create a `\newcommand` with an optional argument 
+
 ----
 
 - Create a new environment `{tinyitalicsquote}` which is like the normal `{quote}` environment, but the font is tiny and in italics
+
+----
+- in Overleaf, create a new file from the external URL http://www.let.uu.nl/~Alexis.Dimitriadis/personal/latex/lotdiss/lotdiss.cls
+- create another file from http://www.let.uu.nl/~Alexis.Dimitriadis/personal/latex/lotdiss/utrecht.clo
+- in `mythesis.tex`, change the documentclass to `lotdiss` and recompile
 
 https://github.com/langsci/latex4linguists/blob/master/5-2.md
