tasks for final day

--- a/5-1.md
+++ b/5-1.md
@@ -1,16 +1,21 @@
-# Tasks for Class 5-2
-----
-- Create a `\newcommand` relevant for your field of research
-- Create a `\newcommand` with one or more arguments 
-- Create a `\newcommand` with an optional argument 
-
-----
-
-- Create a new environment `{tinyitalicsquote}` which is like the normal `{quote}` environment, but the font is tiny and in italics
+# Tasks for Class 5-1
 
 ----
 - in Overleaf, create a new file from the external URL http://www.let.uu.nl/~Alexis.Dimitriadis/personal/latex/lotdiss/lotdiss.cls
 - create another file from http://www.let.uu.nl/~Alexis.Dimitriadis/personal/latex/lotdiss/utrecht.clo
 - in `mythesis.tex`, change the documentclass to `lotdiss` and recompile
+
+----
+- Get a local installation of LaTeX
+- Download the source code of your file as a zip archive. 
+- Compile your project locally 
+
+----
+- Create a document in MS Word/Libreoffice. Add a table to that document. Use the converter at http://glottotopia.org/doc2tex/doc2tex to convert it to LaTeX
+- *Push the result to Overleaf. Look at the error messages and debug
+
+----
+- go to https://www.overleaf.com/latex/templates. Choose presentation. Select a presentation template of your choice and load it in Overleaf. 
+- Do the same for a poster
 
 https://github.com/langsci/latex4linguists/blob/master/5-2.md
