--- a/5-2.md
+++ b/5-2.md
@@ -1,4 +1,22 @@
 ----
+## already done
+- create two lines with the numbers from 1 to 5 and 1 to 10. Link each integer n from the first line to the integer 2n in the second line
+- draw a diagram with your table and your two neighbours' tables to the left and the right
+- draw your favourite representation of the semiotic triangle (e.g. symbol-concept-referent)
+- draw a network graph of Emma, Denis, Janet, Samira, Gottfried, Jussi, and Wang (represented by circles) with a combination of thick, thin and dashed lines symbolising the strength of the links between them. 
+
+## additions 
+- link 1,2,3 in the first line with 3,6,9 in the second. Use a dashed line. 
+- link 1,2 in the first line with 4,8 in the second. Use a dotted line
+
+- add two more "tables" above and below Sebastian
+
+- add a couple more people to the network graph and link them to existing people, using a variety of line styles. Change the border color of some bubbles. Fill some bubbles with a color of your choice. 
+
+----
+- change the values in the barplot
+- add some more columns 
+
 - download the pgfplots manual http://mirrors.ctan.org/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf
 - choose some of the plots on pages 78ff of the manual and copypaste the code into your document. Play around.
 
@@ -10,10 +28,9 @@
 - useful structure for a thesis
 
 ```
-\documentclass[output=book,nonflat,modfonts,
-  colorlinks,citecolor=brown, 
-%  draft,draftmode,  
-		  ]{langscibook}    
+\documentclass[colorlinks,citecolor=brown,
+             %draft
+]{book}
 \input{localmetadata.tex}
 \input{localpackages.tex}
 \input{localhyphenation.tex}
@@ -23,7 +40,7 @@
 \begin{document} 
  
 \input{localcommands.tex} 
-\maketitle                
+\maketitle
 \frontmatter 
 
 \currentpdfbookmark{Contents}{name} % adds a PDF bookmark
@@ -31,10 +48,12 @@
  \include{chapters/preface}
  \include{chapters/acknowledgments}
  \include{chapters/abbreviations} 
-\mainmatter     
 
-\include{chapters/01}  
+\mainmatter
 
+\include{chapters/01}
+
+\backmatter
 \sloppy
 \printbibliography
 \end{document} 
