one more exercise

--- a/5-2.md
+++ b/5-2.md
@@ -12,6 +12,7 @@
 - add two more "tables" above and below Sebastian
 
 - add a couple more people to the network graph and link them to existing people, using a variety of line styles. Change the border color of some bubbles. Fill some bubbles with a color of your choice. 
+- *add a link from a person to itself (a loop)
 
 ----
 - change the values in the barplot
